######### 2013-2-28   #########
drop table shop_purchase_product;
drop table shop_purchase_productsku;
drop table shop_purchases_deposite;
drop table shop_purchases_item;
drop table shop_purchases_purchase;
drop table shop_purchases_purchasetype;
drop table shop_purchases_storage;
drop table shop_purchases_storageitem;
drop table shop_purchases_supplier;
drop table shop_purchases_suppliertype;

######### 2013-2-26   #########
alter table shop_purchase_product add column stock_num int(11) default 0;
alter table shop_purchase_productsku add column sku_num int(11) default 0;
######### 2013-2-22   #########
create index idx_mergetrade_receiver_mobile on shop_trades_mergetrade(receiver_mobile);
create index idx_mergetrade_receiver_phone on shop_trades_mergetrade(receiver_phone);
########  2013-2-21   #########
alter table shop_trades_mergetrade add column return_out_sid varchar(64) NOT NULL;
create index index_mergetrade_return_out_sid on shop_trades_mergetrade(return_out_sid);
alter table shop_trades_mergetrade add column return_logistic_company varchar(64) NOT NULL;
########  2013-2-20   #########
alter table shop_trades_mergetrade add column weight_time datetime DEFAULT NULL;
(update shop_trades_mergetrade set weight_time = consign_time;)
########  2013-1-15   #########
alter table shop_trades_mergetrade add column can_review tinyint(1) NOT NULL;
########  2013-1-14   #########
alter table shop_trades_mergeorder add column is_reverse_order tinyint(1) NOT NULL;
########  2013-1-11   #########
alter table shop_trades_mergetrade add column has_sys_err tinyint(1) NOT NULL;
########  2012-12-29  #########
CREATE UNIQUE INDEX uniq_item_outer_and_sku_id ON shop_memorule_composerule(outer_id,outer_sku_id);
########  2012-12-28  #########
alter table shop_users_user add column contacter varchar(32) NOT NULL;
alter table shop_users_user add column phone varchar(20) NOT NULL;
alter table shop_users_user add column mobile varchar(20) NOT NULL;