@@ -129,9 +129,10 @@ def updateUserProductSkuTask(user_id=None,outer_ids=None,force_update_num=False)
                         sku_outer_id = sku.get('outer_id', None)
                         item = Item.objects.get(num_iid=sku['num_iid'])
                         
-                        sku_prop_dict = dict([ ('%s:%s' % (p.split(':')[0], p.split(':')[1]), p.split(':')[3]) for p in sku['properties_name'].split(';') if p])
-                        if not item.product:
+                        if not item.user.is_primary or not item.product:
                             continue
+                        sku_prop_dict = dict([('%s:%s' % (p.split(':')[0], p.split(':')[1]), p.split(':')[3]) for p in sku['properties_name'].split(';') if p])
+                        
                         psku, state = OnlineProductSku.objects.get_or_create(outer_id=sku_outer_id, product=item.product)
                         if state:
                             for key, value in sku.iteritems():
@@ -168,7 +169,7 @@ def updateUserProductSkuTask(user_id=None,outer_ids=None,force_update_num=False)
 @task()
 def updateAllUserProductSkuTask():
 
-    users = User.objects.all()
+    users = User.objects.filter(is_primary=True)
     for user in users:
 
         subtask(updateUserProductSkuTask).delay(user.visitor_id)
